deplyomnt.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wisecow-deployment
  namespace: wisecow
  labels:
    app: wisecow
spec:
  replicas: 2
  selector:
    matchLabels:
      app: wisecow
  template:
    metadata:
      labels:
        app: wisecow
    spec:
      containers:
        - name: wisecow
          image: satyamdubey024/new_sh_wisecow:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 4499   # change if your app uses different port
          readinessProbe:
            httpGet:
              path: /
              port: 4499
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 4499
            initialDelaySeconds: 15
            periodSeconds: 20
