service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wisecow-service
  namespace: wisecow
  labels:
    app: wisecow
spec:
  selector:
    app: wisecow
  ports:
    - protocol: TCP
      port: 80        # service port
      targetPort: 4499
  type: ClusterIP
